WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145998
[iOS] Canvas dimensions should be limited to 4096x4096 pixels on iOS devices
https://bugs.webkit.org/show_bug.cgi?id=145998
Summary
[iOS] Canvas dimensions should be limited to 4096x4096 pixels on iOS devices
Said Abou-Hallawa
Reported
2015-06-15 18:24:52 PDT
Currently the Canvas size is limited to 256 Mega pixels (1 GB) on all platforms. The dimensions should be limited to 16 Mega pixels (64 MB) if the physical memory is less than 1 GB.
Attachments
Patch
(6.10 KB, patch)
2015-06-15 18:47 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-mavericks-wk2
(797.46 KB, application/zip)
2015-06-15 19:13 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews102 for mac-mavericks
(551.30 KB, application/zip)
2015-06-15 19:23 PDT
,
Build Bot
no flags
Details
Patch
(7.62 KB, patch)
2015-06-15 19:45 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.29 KB, patch)
2015-06-16 10:15 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.19 KB, patch)
2015-06-16 10:39 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.19 KB, patch)
2015-06-16 10:55 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2015-06-15 18:47:22 PDT
Created
attachment 254919
[details]
Patch
Build Bot
Comment 2
2015-06-15 19:13:00 PDT
Comment on
attachment 254919
[details]
Patch
Attachment 254919
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5345401934708736
New failing tests: canvas/drawing/image-create-limit-size.html fast/canvas/pattern-too-large-to-create.html fast/canvas/canvas-toDataURL-crash.html
Build Bot
Comment 3
2015-06-15 19:13:02 PDT
Created
attachment 254921
[details]
Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 4
2015-06-15 19:23:04 PDT
Comment on
attachment 254919
[details]
Patch
Attachment 254919
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5842414476460032
New failing tests: canvas/drawing/image-create-limit-size.html fast/canvas/pattern-too-large-to-create.html fast/canvas/canvas-toDataURL-crash.html
Build Bot
Comment 5
2015-06-15 19:23:06 PDT
Created
attachment 254923
[details]
Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Said Abou-Hallawa
Comment 6
2015-06-15 19:45:55 PDT
Created
attachment 254925
[details]
Patch
Gavin Barraclough
Comment 7
2015-06-15 19:48:07 PDT
Comment on
attachment 254925
[details]
Patch I've commented in radar already, so will keep comment here brief. 16384x16384 seems to be way too high on iOS, even for 1GB and 2GB device (since this would allow a canvas larger than the per-process memory limit). I'd suggest 4096x4096 for all iOS devices (and 16384x16384 seems high for other platforms, too).
Said Abou-Hallawa
Comment 8
2015-06-16 10:15:58 PDT
Created
attachment 254955
[details]
Patch
Said Abou-Hallawa
Comment 9
2015-06-16 10:39:28 PDT
Created
attachment 254956
[details]
Patch
Said Abou-Hallawa
Comment 10
2015-06-16 10:53:08 PDT
<
rdar://problem/21382003
>
Said Abou-Hallawa
Comment 11
2015-06-16 10:55:30 PDT
Created
attachment 254959
[details]
Patch
Said Abou-Hallawa
Comment 12
2015-06-16 10:59:05 PDT
The new patch changes the line number of the log message in the test expected result. This happened because of deleting an invalid comment from the test.
WebKit Commit Bot
Comment 13
2015-06-16 12:51:40 PDT
Comment on
attachment 254959
[details]
Patch Clearing flags on attachment: 254959 Committed
r185603
: <
http://trac.webkit.org/changeset/185603
>
WebKit Commit Bot
Comment 14
2015-06-16 12:51:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug