Canvas dimensions should be limited to 4096x4096 pixels on iOS devices. https://bugs.webkit.org/show_bug.cgi?id=145998

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2015-06-16
Reviewed by Darin Adler.

Source/WebCore:

The value of MaxCanvasArea should depend on the platform. If the platform
is iOS, the limit should be 64M. Otherwise the limit should be 1G.

Test: fast/canvas/pattern-too-large-to-create-2.html

* html/HTMLCanvasElement.cpp: Change MaxCanvasArea value based on the platform.

* rendering/svg/RenderSVGShape.h:
(WebCore::RenderSVGShape::graphicsElement): Remove un-implemented constructor.

LayoutTests:

* fast/canvas/canvas-toDataURL-crash-expected.txt:
* fast/canvas/pattern-too-large-to-create-expected.txt: Change the expected
results due to changing the type of MaxCanvasArea from float to unsigned.

* fast/canvas/canvas-too-large-to-draw-expected.txt: Added.
* fast/canvas/canvas-too-large-to-draw.html: Added.

Canonical link: https://commits.webkit.org/164063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185603 268f45cc-cd09-0410-ab3c-d52691b4dbfc