Source/WebCore/rendering/svg/RenderSVGShape.h
@@ -46,7 +46,6 @@ class SVGGraphicsElement;
 class RenderSVGShape : public RenderSVGModelObject {
 public:
     RenderSVGShape(SVGGraphicsElement&, Ref<RenderStyle>&&);
-    RenderSVGShape(SVGGraphicsElement&, Ref<RenderStyle>&&, Path*, bool);
     virtual ~RenderSVGShape();
 
     SVGGraphicsElement& graphicsElement() const { return downcast<SVGGraphicsElement>(RenderSVGModelObject::element()); }
